// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-dropdown default 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listboxId-fakeId"
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    role="combobox"
  >
    <div
      class="m-input-style__main"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Vegetable
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-activedescendant=""
              aria-describedby="fakeId"
              aria-haspopup="listbox"
              class="m-dropdown__input"
              id="mDropdown-fakeId"
              readonly="readonly"
              role="button"
              type="text"
            />
             
            <!---->
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                aria-label="Ouvrir la liste déroulante"
                class="m-icon m-dropdown__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
    id="fakeId"
    slot="validation"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown drodown in overlay 1`] = `
<div>
  <div
    class="m-overlay"
    title="Title"
  >
    <button
      class="m-button m--is-skin-primary"
      type="button"
    >
      <!---->
       
      <!---->
       
      <span
        class="m-button__text"
      >
        Open 
        <!---->
      </span>
       
      <!---->
       
      <!---->
    </button>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown focus 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listboxId-fakeId"
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    role="combobox"
  >
    <div
      class="m-input-style__main"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Avengers
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-activedescendant=""
              aria-describedby="fakeId"
              aria-haspopup="listbox"
              class="m-dropdown__input"
              id="mDropdown-fakeId"
              readonly="readonly"
              role="button"
              type="text"
            />
             
            <!---->
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                aria-label="Ouvrir la liste déroulante"
                class="m-icon m-dropdown__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
    id="fakeId"
    slot="validation"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown label-up 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listboxId-fakeId"
    class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--is-tag-default"
    role="combobox"
  >
    <div
      class="m-input-style__main"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Name
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-activedescendant=""
              aria-describedby="fakeId"
              aria-haspopup="listbox"
              class="m-dropdown__input"
              id="mDropdown-fakeId"
              readonly="readonly"
              role="button"
              type="text"
            />
             
            <!---->
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                aria-label="Ouvrir la liste déroulante"
                class="m-icon m-dropdown__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
    id="fakeId"
    slot="validation"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown with disabled items 1`] = `
<div
  class="m-dropdown"
  style="width: 100%; max-width: 288px;"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listboxId-fakeId"
    class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
    role="combobox"
  >
    <div
      class="m-input-style__main"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Vegetable
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-activedescendant=""
              aria-describedby="fakeId"
              aria-haspopup="listbox"
              class="m-dropdown__input"
              id="mDropdown-fakeId"
              readonly="readonly"
              role="button"
              type="text"
            />
             
            <!---->
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                aria-label="Ouvrir la liste déroulante"
                class="m-icon m-dropdown__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
    id="fakeId"
    slot="validation"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/disabled Item selected, with label 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    Item selected, with label
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-label-up m--is-disabled m--has-label m--has-value m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Avenger
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                disabled="disabled"
                id="mDropdown-fakeId"
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/disabled No selection, no label 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, no label
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-disabled m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                disabled="disabled"
                id="mDropdown-fakeId"
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/disabled No selection, no label, with placeholder 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, no label, with placeholder
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-disabled m--has-value m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                disabled="disabled"
                id="mDropdown-fakeId"
                placeholder="Select your avenger"
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/disabled No selection, with label 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, with label
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-disabled m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Avenger
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                disabled="disabled"
                id="mDropdown-fakeId"
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/filterable Clear-model-on-selected-text = true 1`] = `
<div>
  <div
    class="m-dropdown m--has-placeholder-icon"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Animals
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__placeholder-icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <input
                aria-activedescendant=""
                aria-autocomplete="both"
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/filterable No placeholder 1`] = `
<div>
  <div
    class="m-dropdown m--has-placeholder-icon"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Animals
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <svg
                aria-hidden="true"
                class="m-icon m-dropdown__placeholder-icon"
                height="16px"
                width="16px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
               
              <input
                aria-activedescendant=""
                aria-autocomplete="both"
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/filterable With placeholder 1`] = `
<div
  class="m-dropdown"
  placeholder-icon-name="m-svg__search"
  style="width: 100%; max-width: 288px;"
>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-owns="listboxId-fakeId"
    class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
    role="combobox"
  >
    <div
      class="m-input-style__main"
      style="width: 100%; margin-top: 10px;"
    >
      <div
        class="m-input-style__body"
      >
        <label
          class="m-input-style__label"
          for="mDropdown-fakeId"
          id="fakeId"
          style="margin-right: 0px;"
        >
          <span
            class="m-input-style__text"
          >
            <span>
              Animals
            </span>
             
            <!---->
          </span>
        </label>
         
        <div
          class="m-input-style__input"
        >
          <!---->
           
          <div
            class="m-input-style__content"
          >
            <!---->
             
            <input
              aria-activedescendant=""
              aria-autocomplete="both"
              aria-describedby="fakeId"
              aria-haspopup="listbox"
              class="m-dropdown__input"
              id="mDropdown-fakeId"
              placeholder="Type to filter"
              readonly="readonly"
              role="button"
              type="text"
            />
             
            <!---->
               
            <!---->
             
            <!---->
          </div>
           
          <div
            class="m-input-style__suffix"
          >
            <div
              class="m-dropdown__arrow"
            >
              <svg
                aria-hidden="true"
                aria-label="Ouvrir la liste déroulante"
                class="m-icon m-dropdown__arrow__icon"
                height="12px"
                width="12px"
              >
                <!---->
                 
                <use
                  aria-hidden="true"
                  class=""
                />
              </svg>
            </div>
             
            <!---->
          </div>
        </div>
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-popper m-popup"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
   
  <div
    class="m-validation-message m-dropdown__validation-message"
    id="fakeId"
    slot="validation"
  >
    <!---->
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/readonly Item selected, with label 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    Item selected, with label
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-readonly m--is-label-up m--has-label m--has-value m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Avenger
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                placeholder=""
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/readonly No selection, no label 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, no label
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-readonly m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                placeholder=""
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/readonly No selection, no label, with placeholder 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, no label, with placeholder
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-readonly m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <span
            class="m-input-style__label"
            style="z-index: -1;"
          >
            <span
              class="m-input-style__text"
            />
          </span>
           
          <div
            class="m-input-style__input"
          >
            <div
              class="m-input-style__prefix"
            />
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                placeholder=""
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/readonly No selection, with label 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, with label
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-readonly m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Avenger
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                placeholder=""
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots modul-components|m-dropdown/readonly No selection, with label, with placeholder 1`] = `
<div>
  <p
    class="m-u--font-weight--semi-bold m-u--padding-bottom--s"
  >
    No selection, with label, with placeholder
  </p>
   
  <div
    class="m-dropdown"
    style="width: 100%; max-width: 288px;"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="listboxId-fakeId"
      class="m-input-style m--is-readonly m--has-label m--is-tag-default"
      role="combobox"
    >
      <div
        class="m-input-style__main"
        style="width: 100%; margin-top: 10px;"
      >
        <div
          class="m-input-style__body"
        >
          <label
            class="m-input-style__label"
            for="mDropdown-fakeId"
            id="fakeId"
            style="margin-right: 0px;"
          >
            <span
              class="m-input-style__text"
            >
              <span>
                Avenger
              </span>
               
              <!---->
            </span>
          </label>
           
          <div
            class="m-input-style__input"
          >
            <!---->
             
            <div
              class="m-input-style__content"
            >
              <!---->
               
              <input
                aria-activedescendant=""
                aria-describedby="fakeId"
                aria-haspopup="listbox"
                class="m-dropdown__input"
                id="mDropdown-fakeId"
                placeholder=""
                readonly="readonly"
                role="button"
                type="text"
              />
               
              <!---->
                 
              <!---->
               
              <!---->
            </div>
             
            <div
              class="m-input-style__suffix"
            >
              <div
                class="m-dropdown__arrow"
              >
                <svg
                  aria-hidden="true"
                  aria-label="Ouvrir la liste déroulante"
                  class="m-icon m-dropdown__arrow__icon"
                  disabled="disabled"
                  height="12px"
                  width="12px"
                >
                  <!---->
                   
                  <use
                    aria-hidden="true"
                    class=""
                  />
                </svg>
              </div>
               
              <!---->
            </div>
          </div>
        </div>
         
        <!---->
      </div>
       
      <div
        class="m-popper m-popup"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
     
    <div
      class="m-validation-message m-dropdown__validation-message"
      id="fakeId"
      slot="validation"
    >
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;
